# fnirs-data-analysis

./: EEG128_lite (2).ipynb  Jittering augementation.ipynb  ROI.py  Spatial permutations.ipynb  Untitled.ipynb  Untitled1.ipynb  Work with pictures.ipynb  average_light.ipynb  average_pictures.py  build_all_epochs.py  build_only_all_epoch.py  build_only_left.py  build_only_peak.py  clear_dirs.py  correct_epochs.py  delta_average.ipynb  fNIRS_cool.ipynb  file_scanning.py  filter_params.py  functions_fnirs.py  loading_raw.py  log_.txt  log_one_channel.txt  log_runtime.txt  make_average_plots.ipynb  meta.py  new_funcs.py  new_picture_builder.py  oxygenations.py  picture_builder.py  plotting_params.py  pyproject.toml  subj_rec_dict.py  top_in_roi.py  topomaps.py  wings.ipynb
.ipynb_checkpoints/: EEG128_lite (2)-checkpoint.ipynb  Untitled-checkpoint.ipynb  Work with pictures-checkpoint.ipynb  average_light-checkpoint.ipynb  delta_average-checkpoint.ipynb  fNIRS_cool-checkpoint.ipynb  make_average_plots-checkpoint.ipynb
jupyter/: fNIRS_MI_TI-Copy1.ipynb  fNIRS_MI_TI.ipynb  fNIRS_code.ipynb
